# material_topopt

./: .coveragerc  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  SetupDesignProblemAndRun.py  environment.yml  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst  make.bat  mymod.rst
mesh_files/: lbracket.exo  letter_M.exo  letter_M.jou  letter_M_complete.exo  paperclip.inp
src/material_topopt/: MMA.py  __init__.py  macroscale_problem.py  optimizer.py  periodic_density_filter.py  representative_volume_element.py  utilities.py
tests/: conftest.py  test_homogenized_properties.py  test_optimizer.py  test_parameter_parsing.py  test_sensitivity_analysis.py
tools/: Lbracket_mesh_example.py  LetterG.py  README.md  portal_frame_mesh_example.py  trimesh_utilities.py
